--- a/index.html
+++ b/index.html
@@ -1,18 +1,3 @@
-<!-- 
-  Hello 😊.
-
-  This template is designed and developed by Nisar Hassan Naqvi
-  for anyone to use for free or customize the way they like.
-
-  Github Repo: https://github.com/nisarhassan12/portfolio-template/
-  My Website: https://nisar.dev
-
-  For business & inquires, contact me => syednisarhassan12@gmail.com
--->
-
-<!--
-  Follow the instructions written in comments to create your stunning portfolio
--->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -24,7 +9,7 @@
 
   <!-- Put your site title here -->
   <title>
-    Syed Ali Hussnain | A Web Developer based in Lahore, Pakistan.
+    Arjun Vijaykumar 
   </title>
 
   <meta name="description" content="Add small description of yourslef.">
@@ -56,10 +41,10 @@
       <div class="header__text">
         <h1 class="heading-primary">
           <!-- Replace the following name with your name -->
-          <span>Syed Ali Hussnain</span>
+          <span>Arjun Vijaykumar</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>A Web Developer based in Lahore, Pakistan.</p>
+        <p>I'm an invited visiting student at department of Materials, ETH Zürich. By working here with the complex materials laboratory, I am completing my master's thesis.</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
